@@ -6,7 +6,8 @@ import org.jsoup.nodes.Document;
 import org.junit.jupiter.api.*;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class RedgifsRipperTest extends RippersTest {
 
@@ -15,8 +16,8 @@ public class RedgifsRipperTest extends RippersTest {
      */
     @Test
     @Disabled("test or ripper broken")
-    public void testRedgifsGoodURL() throws IOException{
-        RedgifsRipper ripper = new RedgifsRipper(new URL("https://www.redgifs.com/watch/talkativewarpeddragon-petite"));
+    public void testRedgifsGoodURL() throws IOException, URISyntaxException {
+        RedgifsRipper ripper = new RedgifsRipper(new URI("https://www.redgifs.com/watch/talkativewarpeddragon-petite").toURL());
         testRipper(ripper);
     }
 
@@ -25,8 +26,8 @@ public class RedgifsRipperTest extends RippersTest {
      */
     @Test
     @Tag("flaky")
-    public void testRedgifsBadRL() throws IOException{
-        RedgifsRipper ripper = new RedgifsRipper(new URL("https://www.gifdeliverynetwork.com/foolishelasticchimpanzee"));
+    public void testRedgifsBadRL() throws IOException, URISyntaxException {
+        RedgifsRipper ripper = new RedgifsRipper(new URI("https://www.gifdeliverynetwork.com/foolishelasticchimpanzee").toURL());
         testRipper(ripper);
     }
 
@@ -35,8 +36,8 @@ public class RedgifsRipperTest extends RippersTest {
      */
     @Test
     @Tag("flaky")
-    public void testRedgifsProfile() throws IOException {
-        RedgifsRipper ripper  = new RedgifsRipper(new URL("https://redgifs.com/users/margo_monty"));
+    public void testRedgifsProfile() throws IOException, URISyntaxException {
+        RedgifsRipper ripper  = new RedgifsRipper(new URI("https://redgifs.com/users/margo_monty").toURL());
         testRipper(ripper);
     }
 
@@ -46,8 +47,8 @@ public class RedgifsRipperTest extends RippersTest {
      */
     @Test
     @Disabled("test or ripper broken")
-    public void testRedgifsSearch() throws IOException {
-        RedgifsRipper ripper  = new RedgifsRipper(new URL("https://redgifs.com/gifs/browse/little-caprice"));
+    public void testRedgifsSearch() throws IOException, URISyntaxException {
+        RedgifsRipper ripper  = new RedgifsRipper(new URI("https://redgifs.com/gifs/browse/little-caprice").toURL());
         Document doc = ripper.getFirstPage();
 
         doc = ripper.getNextPage(doc);
@@ -58,8 +59,8 @@ public class RedgifsRipperTest extends RippersTest {
 
     @Test
     @Tag("flaky")
-    public void testRedditRedgifs() throws IOException {
-        RedditRipper ripper = new RedditRipper(new URL("https://www.reddit.com/r/nsfwhardcore/comments/ouz5bw/me_cumming_on_his_face/"));
+    public void testRedditRedgifs() throws IOException, URISyntaxException {
+        RedditRipper ripper = new RedditRipper(new URI("https://www.reddit.com/r/nsfwhardcore/comments/ouz5bw/me_cumming_on_his_face/").toURL());
         testRipper(ripper);
     }
 }
