@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.Rule34Ripper;
@@ -9,14 +11,14 @@ import org.junit.jupiter.api.Test;
 
 public class Rule34RipperTest extends RippersTest {
     @Test
-    public void testShesFreakyRip() throws IOException {
-        Rule34Ripper ripper = new Rule34Ripper(new URL("https://rule34.xxx/index.php?page=post&s=list&tags=bimbo"));
+    public void testShesFreakyRip() throws IOException, URISyntaxException {
+        Rule34Ripper ripper = new Rule34Ripper(new URI("https://rule34.xxx/index.php?page=post&s=list&tags=bimbo").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://rule34.xxx/index.php?page=post&s=list&tags=bimbo");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://rule34.xxx/index.php?page=post&s=list&tags=bimbo").toURL();
         Rule34Ripper ripper = new Rule34Ripper(url);
         Assertions.assertEquals("bimbo", ripper.getGID(url));
     }
